--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
+    <div id="options">
+      <span class="btn" id="clear">Clear</span>
+      <span class="btn" id="badgeOption">Hide Badge</div>
+    </div>
     <div id="download"></div>
     <!-- <ul id="download"></ul> -->
     <script src="popup.js"></script>
